@@ -1,3 +1,8 @@
+2009-12-02 Tom McCauley <thomas.mccauley@cern.ch>
+
+	* ISpyTriggerEvent.cc: add fix to handling of process name
+	in input tags (thanks to J. Tucker)
+
 2009-12-01  Ianna Osborne  <ianna.osborne@cern.ch>
 
 	* ispy_33X_online_cfg.py: Online example. 
